--- a/.github/workflows/maven1.yml
+++ b/.github/workflows/maven1.yml
@@ -51,5 +51,5 @@ jobs:
           push: true
           tags: user/app:latest
           context: ./
-          file: ./Dockerfile
+          file: Dockerfile
 
