--- a/.github/workflows/maven1.yml
+++ b/.github/workflows/maven1.yml
@@ -49,7 +49,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: user/app:latest
+          tags: guotajun/test
           context: ./
-          file: Dockerfile
+          file: ./Dockerfile
 
