--- a/.github/workflows/maven1.yml
+++ b/.github/workflows/maven1.yml
@@ -50,6 +50,6 @@ jobs:
         with:
           push: true
           tags: guotajun/test
-          context: ./
+          context: .
           file: ./Dockerfile
 
